--- a/food.html
+++ b/food.html
@@ -40,6 +40,8 @@
 			Do you eat an apple a day? If you give your body the opportunity it will amaze you with what it can do. We have been conditioned to reach for the medicine cabinet whenever we feel pain, fatigue or illness. Don't get me wrong, there are some good tools in there when it comes to accute illness but when it comes to long term conditions they merely attack the symptoms. What is the cause though? You haven't eaten your apple and the doctor has come knocking on your door. He's offering salvation if you hand over your wallet. The answer is not as simple as eating an apple though, you also need to stop eating the ice cream. That's where we seem to have come unstuck.
 		</p>
 
+		<iframe width="560" height="315" src="http://www.youtube.com/embed/5eKYyD14d_0" frameborder="0" allowfullscreen></iframe>
+
 		<h3>But I'm Not That Unhealthy...</h3>
 
 		<p>
@@ -50,15 +52,11 @@
 			When I saw the doctor a while ago (before I went Vegan) he weighed me in at about 97kg I think (I'm about 6'1") and he suggested that I lose weight. I checked my stats against the BMI when I got home and was surprised to find that I was overwieht with a BMI of 28.3 (not far from obese). I told the guys at work about this and they said it was nonsense. They said I didn't need to lose weight and that the doctor hadn't taken into account my 'athletic' build. Althletic? Okay I have kind of broad shoulders but I don't have the kind of muscles that would put a BMI that far out of whack. So why were they so sure I was OK? Because if I was overweight, they probably were too.
 		</p>
 
-		<h3>Energy</h3>
-
-		<p>
-			There are two ways to combat this problem. It's a simple equation: energy out must equal energy in. So the first way to combat this is to increase the energy out: exercise more. While exercise is important, it is not capable of countering the incredibly high calorie intake of a bad diet. The best course of action is to reduce the energy in: Eat only what you need.
-		</p>
-
 		<p>
 			Today I weigh in at about 73kg and with a BMI of 21.3. That's almost perfect. To be honest, once I got below 85kg I wasn't even trying anymore. 85kg was my goal. How did I do it? I changed my diet.
 		</p>
+
+		<iframe src="http://player.vimeo.com/video/18732737" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 		<h3>Protein and other things</h3>
 
@@ -69,7 +67,7 @@
 		<h3>Cancer</h3>
 
 		<p>
-			Cancer? Diet related? I must be crazy to think this right? Our doctors tell us that chemotherapy and other horrible treatments are the best weapon against cancer. WRONG. Chemotherapy has about a 30% success rate regardless of how progressed the cancer is. Chemotherapy IS A CARCINOGEN. The Gerson Therapy, which uses your body as the weapon with which to fight cancer, has had great results but it is illegal for your docter to tell you about it. It is illegal to suggest a therapy without any major side effects because it is 'not proven to be effective' but it is perfectly legal to suggest a therapy with hoirrible side effects that has been PROVEN TO BE INEFFECTIVE.
+			Cancer? Diet related? I must be crazy to think this right? Our doctors tell us that chemotherapy and other horrible treatments are the best weapon against cancer. WRONG. Chemotherapy has about a 30% success rate regardless of how progressed the cancer is. Chemotherapy IS A CARCINOGEN. The Gerson Therapy, which uses your body as the weapon with which to fight cancer, has had great results but it is illegal for your doctor to tell you about it. It is illegal to suggest a therapy without any major side effects because it is 'not proven to be effective' but it is perfectly legal to suggest a therapy with hoirrible side effects that has been PROVEN TO BE INEFFECTIVE.
 		</p>
 
 		<h3>Do Not Go On A Diet</h3>
@@ -77,6 +75,8 @@
 		<p>
 			So I guess to summarise: eat well, not too much and do not underestimate the value of a healthy diet. Yes, diet is important. Hugely important. I cannot overstate its importance. Do not confuse this for advice to go on a diet though. Going on a diet implies that you are doing it for a limited time. A week maybe? Or a month? How long after that month to you expect to stay healthy? Do not go on a diet. CHANGE YOUR LIFESTYLE. If you want to be heathy, you must live healthily. There is no substitute for this.
 		</p>
+
+		<iframe width="560" height="315" src="http://www.youtube.com/embed/r4DOQ6Xhqss" frameborder="0" allowfullscreen></iframe>
 
 		<h3>A Guide To Good Food</h3>
 
@@ -114,13 +114,13 @@
 		<h4>Vegan</h4>
 
 		<p>
-			
+			I do not wish to be involved in the harm of animals. Some argue that to eat meat is not to kill the animal yourself and therefore you are not causing any pain but I think that is a cop out. If I want to eat meat, I should be prepared to kill the animal myself. I am not prepared to do that so I do not eat it. Dairy and eggs are taken from animals that suffer during their lifetime to bring it to you. Free range is another term that has been defined by the corporations to mean not much at all. I will eat dairy and eggs if I can be sure they came from animals that are treated with respect but I don't feel any real need to do so.
 		</p>
 
 		<h4>Raw</h4>
 
 		<p>
-			
+			Like other forms of processing, cooking (generally, but not always) reduces the nutritional value of food. It also kills off the enzymes that our body needs to help digestion and other processes. I wouldn't call myself a raw foodist (yet...) but I do eat a lot of raw food. I make sure that at least 50% of the food I eat is raw. Juices, smoothies, salads. In time you will come to love these. They will become your candy. Speaking of candy, don't get me started on raw deserts...
 		</p>
 	</body>
 
