--- a/food.html
+++ b/food.html
@@ -40,7 +40,7 @@
 			Do you eat an apple a day? If you give your body the opportunity it will amaze you with what it can do. We have been conditioned to reach for the medicine cabinet whenever we feel pain, fatigue or illness. Don't get me wrong, there are some good tools in there when it comes to accute illness but when it comes to long term conditions they merely attack the symptoms. What is the cause though? You haven't eaten your apple and the doctor has come knocking on your door. He's offering salvation if you hand over your wallet. The answer is not as simple as eating an apple though, you also need to stop eating the ice cream. That's where we seem to have come unstuck.
 		</p>
 
-		<iframe width="560" height="315" src="http://www.youtube.com/embed/5eKYyD14d_0" frameborder="0" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="http://www.youtube.com/embed/r4DOQ6Xhqss" frameborder="0" allowfullscreen></iframe>
 
 		<h3>But I'm Not That Unhealthy...</h3>
 
@@ -76,8 +76,6 @@
 			So I guess to summarise: eat well, not too much and do not underestimate the value of a healthy diet. Yes, diet is important. Hugely important. I cannot overstate its importance. Do not confuse this for advice to go on a diet though. Going on a diet implies that you are doing it for a limited time. A week maybe? Or a month? How long after that month to you expect to stay healthy? Do not go on a diet. CHANGE YOUR LIFESTYLE. If you want to be heathy, you must live healthily. There is no substitute for this.
 		</p>
 
-		<iframe width="560" height="315" src="http://www.youtube.com/embed/r4DOQ6Xhqss" frameborder="0" allowfullscreen></iframe>
-
 		<h3>A Guide To Good Food</h3>
 
 		<p>
@@ -91,7 +89,7 @@
 		</p>
 
 		<ul>
-			<li>Stick to the ouside of the supermarket. That where the whole food lives: ingredients. Fruit, vegetables, nuts, seeds, grains, meats etc. Things that you know to be food from nature.</li>
+			<li>Stick to the ouside of the supermarket. That's where the whole food lives: ingredients. Fruit, vegetables, nuts, seeds, grains, meats etc. Things that you know to be food from nature.</li>
 			<li>If you do venture into the sea of food-like products that lives in the inner supermarket and buy something that is not an ingredient but instead lists ingredients, examine the ingredient label. If you find anything in the ingredients that is not food, don't buy it and don't eat it. Things that are not food include high fructuse corn syrup (HFCS), colours (which by New Zealand law could be ANYTHING!), preservatives etc.</li>
 		</ul>
 
