Removed links to un-done pages. Modified spirituality and food.
Former-commit-id: c763c6443b3703135c6d0c36074ba7480e23326b

--- a/community.html
+++ b/community.html
@@ -15,29 +15,33 @@
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
-				<!--a href="community.html">Community</a>
+				<a href="community.html">Community</a>
 				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a-->
-				<a href="contactme.html">Contact</a>
+				<a href="opensource.html">Open Source</a>
 			</div>
 			<div id="menu">
 				<a href="games.html">Games</a>
 				<a href="software.html">Software</a>
 				<a href="travel.html">Travel</a>
 				<a href="film.html">Film</a>
-				<!--a href="contactme.html">Contact</a-->
+				<a href="contactme.html">Contact</a>
 			</div>
 		</div>
 
-		<p style="text-align: center;">
-			My name is Gary, Gary Shawn Buyn to be precise. Herein lie my musings and projects.
+		<h2>Community</h2>
+
+		<p>
+			Do you live in a community or just a collection of houses? Community is hard to find these days. I live in an apartment building and I know one of my neighbours... just one.
 		</p>
 
-		<img src="images/the-ocean.jpg" />
+		<h3>Communities in New Zealand</h3>
 
-		<p style="text-align: center;">
-			Overlooking the ocean ahead, turbulent waves can be seen. Eventually though, these waves give way to an endless expanse of calm and clarity. Such is the path.
-		</p>
+		<ul>
+			<li>Awaawaroa Bay Eco Village</li>
+			<li>Ahika (Sustainable Settlement NZ)</li>
+			<li>Atamai Eco Village</li>
+			<li>Earthsong Eco-Neighbourhood</li>
+		</ul>
 	</body>
 
 </html>
