--- a/food.html
+++ b/food.html
@@ -15,16 +15,17 @@
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
-				<a href="community.html">Community</a>
+				<!--a href="community.html">Community</a>
 				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a>
+				<a href="opensource.html">Open Source</a-->
+				<a href="contactme.html">Contact</a>
 			</div>
 			<div id="menu">
 				<a href="games.html">Games</a>
 				<a href="software.html">Software</a>
 				<a href="travel.html">Travel</a>
 				<a href="film.html">Film</a>
-				<a href="contactme.html">Contact</a>
+				<!--a href="contactme.html">Contact</a-->
 			</div>
 		</div>
 
@@ -62,12 +63,6 @@
 
 		<p>
 			Being a Vegan, you often hear the question "where do you get your protein from?" Why are you so interested in protein? Where do you get your vitamins from? Where do you get your nutrients from? These are the things people are lacking in, we get more than enough protein. More than 60% of the world gets its protein from plants. Are you tired in the afternoon? Do you need coffee or energy drinks to keep your energy levels up? Do you have trouble focusing? Do you suffer from chronic diseases like obesity, diabetes, heart disease or auto immune conditions? These are DIET RELATED DISEASES along with many forms of cancer. This is not the way it is supposed to be. You are experiencing this because you are not giving your body what it needs.
-		</p>
-
-		<h3>Cancer</h3>
-
-		<p>
-			Cancer? Diet related? I must be crazy to think this right? Our doctors tell us that chemotherapy and other horrible treatments are the best weapon against cancer. WRONG. Chemotherapy has about a 30% success rate regardless of how progressed the cancer is. Chemotherapy IS A CARCINOGEN. The Gerson Therapy, which uses your body as the weapon with which to fight cancer, has had great results but it is illegal for your doctor to tell you about it. It is illegal to suggest a therapy without any major side effects because it is 'not proven to be effective' but it is perfectly legal to suggest a therapy with hoirrible side effects that has been PROVEN TO BE INEFFECTIVE.
 		</p>
 
 		<h3>Do Not Go On A Diet</h3>
