--- a/opensource.html
+++ b/opensource.html
@@ -15,28 +15,23 @@
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
-				<!--a href="community.html">Community</a>
+				<a href="community.html">Community</a>
 				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a-->
-				<a href="contactme.html">Contact</a>
+				<a href="opensource.html">Open Source</a>
 			</div>
 			<div id="menu">
 				<a href="games.html">Games</a>
 				<a href="software.html">Software</a>
 				<a href="travel.html">Travel</a>
 				<a href="film.html">Film</a>
-				<!--a href="contactme.html">Contact</a-->
+				<a href="contactme.html">Contact</a>
 			</div>
 		</div>
 
-		<p style="text-align: center;">
-			My name is Gary, Gary Shawn Buyn to be precise. Herein lie my musings and projects.
-		</p>
+		<h2>Open Source</h2>
 
-		<img src="images/the-ocean.jpg" />
-
-		<p style="text-align: center;">
-			Overlooking the ocean ahead, turbulent waves can be seen. Eventually though, these waves give way to an endless expanse of calm and clarity. Such is the path.
+		<p>
+			
 		</p>
 	</body>
 
