--- a/travel.html
+++ b/travel.html
@@ -17,16 +17,17 @@
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
-				<a href="community.html">Community</a>
+				<!--a href="community.html">Community</a>
 				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a>
+				<a href="opensource.html">Open Source</a-->
+				<a href="contactme.html">Contact</a>
 			</div>
 			<div id="menu">
 				<a href="games.html">Games</a>
 				<a href="software.html">Software</a>
 				<a href="travel.html">Travel</a>
 				<a href="film.html">Film</a>
-				<a href="contactme.html">Contact</a>
+				<!--a href="contactme.html">Contact</a-->
 			</div>
 		</div>
 
