--- a/spirituality.html
+++ b/spirituality.html
@@ -15,32 +15,39 @@
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
-				<a href="community.html">Community</a>
+				<!--a href="community.html">Community</a>
 				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a>
+				<a href="opensource.html">Open Source</a-->
+				<a href="contactme.html">Contact</a>
 			</div>
 			<div id="menu">
 				<a href="games.html">Games</a>
 				<a href="software.html">Software</a>
 				<a href="travel.html">Travel</a>
 				<a href="film.html">Film</a>
-				<a href="contactme.html">Contact</a>
+				<!--a href="contactme.html">Contact</a-->
 			</div>
 		</div>
 
 		<h2>Spirituality</h2>
 
+		<h3>Christianity</h3>
+
 		<p>
-			I do not identify myself with any religions. I was baptised as a christian when I was less than one year old. This does not make me a christian. The people who baptised me were christians but it does not make me a christian.
+			I do not identify myself with any religions. I was baptised as a christian when I was less than one year old. This does not make me a christian. The priest who baptised me was a christian but it does not make me a christian.
 		</p>
 
 		<p>
 			Growing up I was exposed to christianity more than anything else being in the western world (New Zealand). I didn't think much of it and would probably have called myself an agnostic until about my early-mid 20s if I bothered to call myself anything at all. At this time I read The God Delusion and did some thinking of my own that lead me to move from agnostic to aethiest. I couldn't beleive that there was a man with a white beard in the sky that created everything and I couldn't beleive the tales from the bible. I was a beleiver in science.
 		</p>
 
+		<h3>Level 14!</h3>
+
 		<p>
 			During my travels in Europe I stayed a while in the campervan carpark of the Sierra Nevada ski resort near Granada in Spain. It was free in the summer months with power and water! Whilst I was there I met a man who called himself a spiritual healer. He asked me if I considered myself to be a spiritual person. At the time I thought it was an odd question and I think my response was something along the lines of "I don't know, I've never thought of myself that way". He said he didn't like to put nombers on these things but that he had a scale of 1-14, 14 being the most spiritual. He asked if he could check me to see how spiritual I was and I thought "sure, why not". He consulted his pendulum and said "beautiful, you are a 14". I didn't know what to think of this at the time.
 		</p>
+
+		<h3>Other Religions</h3>
 
 		<p>
 			The next religions I found at the age of 27. I learned about <a href="http://www.venganza.org">Pastafarianism and the church of the flying spaghetti monster</a> and enjoyed the light-heartedness of it. Why must religion always be so serious? From then I declared myself an aethiest/pastafarian and even bought the t-shirt.
@@ -50,12 +57,14 @@
 			I also started <a href="http://meditateinauckland.org/meditation-classes/meditation-auckland">attending classes once a week in Buddhist dharma and meditation</a>. I primarily started because I was interested in meditation but I continued because the philosophies were so intruiging. They were so straight forward. They were not hidden in biblical tales. They laid it out in front of you very clearly: This is what you have been doing. This is why it hasn't been working. This is how you can be happy. Don't just experience fleeting happiness but REAL happiness. And the idea of nothingness... I started incorporating the teachings into my daily life immediately and meditated more frequently. There was more positivity in my life. I knew that I was on the path to true happiness but I didn't have any profound experiences at this time.
 		</p>
 
+		<h3>My Own Path</h3>
+
 		<p>
 			Soon after I turned 29 I met Nicole. She challenged so much about my beliefs. I started <a href="http://www.nzyoga.co.nz">practicing Yoga</a> and reading about Tantra in a book by <a href="http://www.osho.com">Osho</a>. His writings were so profound to me. I'd never had any spiritual teachings resonate with me in such a way. Through each-other Nicole and I learned so much about ourselves and I had profound experiences that confirmed what I had been reading. Strong feelings of love overwhelmed me at times. Through Tantra I lost the desire to climax during love making and gained the desire to simply make love. To just be - together. Nicole and I became very close very quickly. We were attached to each-other.
 		<p>
 
 		</p>
-			Attachment is not love, this is a falacy. We decided that we could not continue with this attachment and that we should be just friends. The time after this was extremely challenging for me but I decided to stay true to my spirituality. I observed my feelings and questioned their validity, their source. I could not have predicted the power that this has given me, the growth that has resulted. I experienced happiness beyond anything I had experienced before. I felt the energy moving through my body. I felt love for all living things. I have always been a relaxed person but I felt a clarity and a peace and a calm that I hed never felt before.
+			Attachment is not love, this is a falacy. It was not the right time for us so we decided to just be friends. The time after this was extremely challenging for me but I decided to stay true to my spirituality. I observed my feelings and questioned their validity, their source. I could not have predicted the power that this has given me, the growth that has resulted. I experienced happiness beyond anything I had experienced before. I felt the energy moving through my body. I felt love for all living things. I have always been a relaxed person but I felt a clarity and a peace and a calm that I hed never felt before.
 		</p>
 
 		</p>
