Finished off games and software
Former-commit-id: 592fcd47be7425655a490639f70c826fefe2d3a3

--- a/games.html
+++ b/games.html
@@ -12,7 +12,6 @@
 	<body>
 		<div id="header">
 			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
-			<h2 style="color: red;">UNDER CONSTRUCTION</h2>
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
@@ -188,115 +187,48 @@
 			</td>
 		</table>
 
-		<h4>Connect 4</h4>
+		<h4>Monster Trains: Off Da Railz</h4>
 
 		<p>
-			This variation of Connect 4 allows multiple connections of 4 to be made by each player. The game ends when the board is full and the winner is the player who has made the most connections.
+			This was a group project to rapid prototype a game. We used Unity3d as our middleware.
+		</p>
+
+		<p>
+			Off Da Railz is a game where you play a monster train that has gone off the rails and is out of control. You compete to obtain the most carriages. You can smash the carriages off of other trains by ramming them or shooting them.
 		</p>
 
 		<table>
 			<td>
 				<h5>Source</h5>
 
-				<a href="https://github.com/simplegsb/media-design-school/tree/master/AI/Formatives/Connect4">Repository on GitHub</a>
+				<a href="https://github.com/vox-populi/off-da-railz">Repository on GitHub</a>
 
 				<h5>Download</h5>
 
-				Windows: <a href="bin/connect4.zip">connect4.zip</a>
+				Windows: <a href="bin/offdarailz.zip">offdarailz.zip</a>
 
 				<h5>Controls</h5>
 
-				<p>
-					Use the left mouse button to select which column you want to drop a token into.
-				</p>
+				<ul>
+					<li>A/D/Left/Right - Steer the train.</li>
+					<li>Q/E/Mouse Scroll - Select a powerup.</li>
+					<li>Space - Use a powerup.</li>
+					<li>Esc - Show the menu.</li>
+				</ul>
 
 				<h5>Features</h5>
 
 				<ul>
-					<li>An AI opponent who decides which move to take using a red-black tree with alpha-beta pruning.</li>
+					<li>Multiplayer with up to 16 players over a LAN or the internet.</li>
+					<li>Shotgun and speed boost powerups.</li>
+					<li>No control over train speed.</li>
+					<li>Robust physics that ensure the train does not fall over and the carriages follow it correctly.</li>
 				</ul>
 			<td>
 			<td>
-				<h5>Screenshot</h5>
+				<h5>Trailer</h5>
 
-				<img src="images/connect4.png" />
-			</td>
-		</table>
-
-		<h4>Steering</h4>
-
-		<p>
-			Steering behaviours give autonomous characters "the ability to navigate around their world in a life-like and improvisational manner" <a href="http://www.red3d.com/cwr/steer/">(?)</a>. This demo uses whiskers, repulsion zones and approach radii as well as various other techniques to acheive this.
-		</p>
-
-		<table>
-			<td>
-				<h5>Source</h5>
-
-				<a href="https://github.com/simplegsb/media-design-school/tree/master/AI/Formatives/Steering">Repository on GitHub</a>
-
-				<h5>Download</h5>
-
-				Windows: <a href="bin/steering.zip">steering.zip</a>
-
-				<h5>Controls</h5>
-
-				<p>
-					Move the mouse around the window so the cats have a moving target.
-				</p>
-
-				<h5>Features</h5>
-
-				<ul>
-					<li>Cats seek the mouse.</li>
-					<li>Cats have whiskers which they use to avoid collisions with other cats and static obstacles.</li>
-					<li>Trees and the ends of walls have repulsion zones which the cats react to.</li>
-					<li>Repulsion zones and whiskers effect both the speed and desired heading of the cats.</li>
-					<li>If a cat gets stuck, it will attempt to turn around.</li>
-					<li>The mouse is surrounded by a large approach radius, when the cats enter it they will begin to slow down.</li>
-					<li>Cats turn faster when they are facing away from the mouse.</li>
-					<li>Cats travel faster when they are not turning (or turning slowly).</li>
-				</ul>
-			<td>
-			<td>
-				<h5>Screenshot</h5>
-
-				<img src="images/steering.png" />
-			</td>
-		</table>
-
-		<h4>Mob Mole Madness</h4>
-
-		<p>
-			The AI in this game combines path finding, steering, state machines, world exploration, visual debugging ...
-		</p>
-
-		<table>
-			<td>
-				<h5>Source</h5>
-
-				<a href="https://github.com/simplegsb/media-design-school/tree/master/AI/Summatives/MobMoleMadness">Repository on GitHub</a>
-
-				<h5>Download</h5>
-
-				Windows: <a href="bin/mobmolemadness.zip">mobmolemadness.zip</a>
-
-				<h5>Controls</h5>
-
-				<p>
-					Use the arrow keys to move the squirrel around the map. Moving gives off vibrations which the moles can detect so be careful not to move too much when close to them. Collect the acorns and take them back to your holes to complete the level.
-				</p>
-
-				<h5>Features</h5>
-
-				<ul>
-					<li>...</li>
-				</ul>
-			<td>
-			<td>
-				<h5>Screenshot</h5>
-
-				<img src="images/mobmolemadness.png" />
+				<iframe width="560" height="315" src="http://www.youtube.com/embed/vdIptHqYp8w" frameborder="0" allowfullscreen></iframe>
 			</td>
 		</table>
 
@@ -348,6 +280,38 @@
 			</td>
 		</table>
 
+		<h4>Kilonzo</h4>
+
+		<p>
+			A board game we designed using an iteritive process. Our lecturer went to wikipedia and pressed the 'random article' for each group to give us our themes. We got <a href="http://en.wikipedia.org/wiki/Charles_Kilonzo">Charles Kilonzo</a> - a Kenyan politician - and decided to make a game about Kenyan politics.
+		</p>
+
+		<table>
+			<td>
+				<h5>Download</h5>
+
+				<a href="bin/kilonzo.zip">kilonzo.zip</a>
+
+				<h5>A Guide to the Kenyan Political System</h5>
+
+				<a href="bin/KilonzoGuide.pdf">KilonzoGuide.pdf</a>
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>Up to 4 players.</li>
+					<li>Gain influence in the different regions of Kenya.</li>
+					<li>Hold campaigns (and smear campaigns against your opponents).</li>
+					<li>Debate with your opponents.</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Game Board</h5>
+
+				<img src="images/kilonzo.jpg" />
+			</td>
+		</table>
+
 		<h4>Snake</h4>
 
 		<p>
@@ -374,7 +338,7 @@
 				<h5>Features</h5>
 
 				<ul>
-					<li>Up to 16 players</li>
+					<li>Up to 16 players (over a LAN)</li>
 					<li>Persistent high scores (requires appropriate ODBC data source)</li>
 				</ul>
 			<td>
@@ -382,6 +346,235 @@
 				<h5>Screenshot</h5>
 
 				<img src="images/snake.png" />
+			</td>
+		</table>
+
+		<h4>Green Companion</h4>
+
+		<p>
+			A non-violent game prototype. We based our game on the concepts of futility, balance and collaboration. We used Unity3d as our middleware. Being a prototype, some of the features do not work correctly.
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simplegsb/moving-crystal-turtle/green-companion">Repository on GitHub</a>
+
+				<h5>Download</h5>
+
+				Windows: <a href="bin/greencompanion.zip">greencompanion.zip</a>
+
+				<h5>Controls</h5>
+
+				When the game starts it will give you a short tutorial, click the mouse or press any key to advance through the tutorial.
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>Plants require nutrients to grow.</li>
+					<li>Add nutrients manually or find ways for the garden to sustain itself.</li>
+					<li>Trade plants with friends over a LAN or the internet.</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/greencompanion.png" />
+			</td>
+		</table>
+
+		<h4>Steering</h4>
+
+		<p>
+			Steering behaviours give autonomous characters "the ability to navigate around their world in a life-like and improvisational manner" <a href="http://www.red3d.com/cwr/steer/">(?)</a>. This demo uses whiskers, repulsion zones and approach radii as well as various other techniques to acheive this.
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simplegsb/media-design-school/tree/master/AI/Formatives/Steering">Repository on GitHub</a>
+
+				<h5>Download</h5>
+
+				Windows: <a href="bin/steering.zip">steering.zip</a>
+
+				<h5>Controls</h5>
+
+				<p>
+					Move the mouse around the window so the cats have a moving target.
+				</p>
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>Cats seek the mouse.</li>
+					<li>Cats have whiskers which they use to avoid collisions with other cats and static obstacles.</li>
+					<li>Trees and the ends of walls have repulsion zones which the cats react to.</li>
+					<li>Repulsion zones and whiskers effect both the speed and desired heading of the cats.</li>
+					<li>If a cat gets stuck, it will attempt to turn around.</li>
+					<li>The mouse is surrounded by a large approach radius, when the cats enter it they will begin to slow down.</li>
+					<li>Cats turn faster when they are facing away from the mouse.</li>
+					<li>Cats travel faster when they are not turning (or turning slowly).</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/steering.png" />
+			</td>
+		</table>
+
+		<h4>Grumpy Birds 3D</h4>
+
+		<p>
+			A 3D take-off of Angry Birds that uses the PhysX physics library to simulate a 3D physical world.
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simplegsb/media-design-school/tree/master/Physics/Summatives/GrumpyBirds3D">Repository on GitHub</a>
+
+				<h5>Download</h5>
+
+				Windows: <a href="bin/grumpybirds3d.zip">grumpybirds3d.zip</a>
+
+				<h5>Controls</h5>
+
+				<ul>
+					<li>Mouse Scroll - Pull back on the slingshot.</li>
+					<li>Hold Left Mouse Button and Move Mouse - Aim the slingshot.</li>
+					<li>Let Go of the Left Mouse Button - Fire the slingshot.</li>
+				</ul>
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>You get 10 'birds' to fire.</li>
+					<li>The birds explode after a certain time frame.</li>
+					<li>There are four 'pigs' to kill.</li>
+					<li>The 'pigs' are killed when enough force is applied to them.</li>
+					<li>The slingshot uses PhysX springs.</li>
+					<li>The fence uses PhysX fixed joints.</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/grumpybirds3d.png" />
+			</td>
+		</table>
+
+		<h4>3D World</h4>
+
+		<p>
+			A basic 3D world in which you can drive a tank.
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simplegsb/media-design-school/tree/master/Physics/Summatives/GrumpyBirds3D">Repository on GitHub</a>
+
+				<h5>Download</h5>
+
+				Windows: <a href="bin/3dworld.zip">3dworld.zip</a>
+
+				<h5>Controls</h5>
+
+				<ul>
+					<li>WASD - Drive the tank around the world.</li>
+					<li>Mouse - Aim the turret.</li>
+					<li>Left Mouse Button - Fire the main gun.</li>
+				</ul>
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>Lighting</li>
+					<li>Materials</li>
+					<li>Physics</li>
+					<li>Textures</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/3dworld.png" />
+			</td>
+		</table>
+
+		<!--h4>Connect 4</h4>
+
+		<p>
+			This variation of Connect 4 allows multiple connections of 4 to be made by each player. The game ends when the board is full and the winner is the player who has made the most connections.
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simplegsb/media-design-school/tree/master/AI/Formatives/Connect4">Repository on GitHub</a>
+
+				<h5>Download</h5>
+
+				Windows: <a href="bin/connect4.zip">connect4.zip</a>
+
+				<h5>Controls</h5>
+
+				<p>
+					Use the left mouse button to select which column you want to drop a token into.
+				</p>
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>An AI opponent who decides which move to take using a red-black tree with alpha-beta pruning.</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/connect4.png" />
+			</td>
+		</table>
+
+		<h4>Mob Mole Madness</h4>
+
+		<p>
+			The AI in this game combines path finding, steering, state machines, world exploration, visual debugging ...
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simplegsb/media-design-school/tree/master/AI/Summatives/MobMoleMadness">Repository on GitHub</a>
+
+				<h5>Download</h5>
+
+				Windows: <a href="bin/mobmolemadness.zip">mobmolemadness.zip</a>
+
+				<h5>Controls</h5>
+
+				<p>
+					Use the arrow keys to move the squirrel around the map. Moving gives off vibrations which the moles can detect so be careful not to move too much when close to them. Collect the acorns and take them back to your holes to complete the level.
+				</p>
+
+				<h5>Features</h5>
+
+				<ul>
+					<li>...</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/mobmolemadness.png" />
 			</td>
 		</table>
 
@@ -420,75 +613,37 @@
 			</td>
 		</table>
 
-		<h4>Grumpy Birds 3D</h4>
+		<h4>ZDay</h4>
 
 		<p>
-			...
+			
 		</p>
 
 		<table>
 			<td>
-				<h5>Source</h5>
-
-				<a href="https://github.com/simplegsb/media-design-school/tree/master/Physics/Summatives/GrumpyBirds3D">Repository on GitHub</a>
-
 				<h5>Download</h5>
 
-				Windows: <a href="bin/grumpybirds3d.zip">grumpybirds3d.zip</a>
+				<a href="bin/kilonzo.zip">kilonzo.zip</a>
 
-				<h5>Controls</h5>
+				<h5>A Guide to the Kenyan Political System</h5>
 
-				<p>
-					...
-				</p>
+				<a href="bin/KilonzoGuide.pdf">KilonzoGuide.pdf</a>
 
 				<h5>Features</h5>
 
 				<ul>
-					<li>...</li>
+					<li>Up to 4 players.</li>
+					<li>Gain influence in the different regions of Kenya.</li>
+					<li>Hold campaigns (and smear campaigns against your opponents).</li>
+					<li>Debate with your opponents.</li>
 				</ul>
 			<td>
 			<td>
-				<h5>Screenshot</h5>
+				<h5>Game Board</h5>
 
-				<img src="images/grumpybirds3d.png" />
+				<img src="images/kilonzo.jpg" />
 			</td>
-		</table>
-
-		<h4>3D World</h4>
-
-		<p>
-			...
-		</p>
-
-		<table>
-			<td>
-				<h5>Source</h5>
-
-				<a href="https://github.com/simplegsb/media-design-school/tree/master/Physics/Summatives/GrumpyBirds3D">Repository on GitHub</a>
-
-				<h5>Download</h5>
-
-				Windows: <a href="bin/3dworld.zip">3dworld.zip</a>
-
-				<h5>Controls</h5>
-
-				<p>
-					...
-				</p>
-
-				<h5>Features</h5>
-
-				<ul>
-					<li>...</li>
-				</ul>
-			<td>
-			<td>
-				<h5>Screenshot</h5>
-
-				<img src="images/3dworld.png" />
-			</td>
-		</table>
+		</table-->
 	</body>
 
 </html>
