--- a/software.html
+++ b/software.html
@@ -12,7 +12,6 @@
 	<body>
 		<div id="header">
 			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
-			<h2 style="color: red;">UNDER CONSTRUCTION</h2>
 			<div id="menu">
 				<a href="spirituality.html">Spirituality</a>
 				<a href="food.html">Food</a>
@@ -70,9 +69,7 @@
 
 				Android: <a href="bin/pcremoteforandroid.apk">pcremoteforandroid.apk</a>
 				</br>
-				Ubuntu: <a href="bin/pcremoteserver.deb">pcremoteserver.deb</a>
-				</br>
-				Windows: <a href="bin/pcremoteserver.zip">pcremoteserver.zip</a>
+				Cross-platform: <a href="bin/pcremoteserver.zip">pcremoteserver.jar</a>
 
 				<h5>Features</h5>
 
@@ -87,7 +84,7 @@
 			<td>
 				<h5>Screenshot</h5>
 
-				<img src="images/pcremoteforandroid.jpg" />
+				<img src="images/pcremoteforandroid.png" />
 			</td>
 		</table>
 
