Added Alan Watts video
Former-commit-id: fde4ce68130cda1767558c2f705a952b90b5789b

--- a/spirituality.html
+++ b/spirituality.html
@@ -59,6 +59,8 @@
 
 		<h3>My Own Path</h3>
 
+		<iframe width="560" height="315" src="http://www.youtube.com/embed/mMRrCYPxD0I" frameborder="0" allowfullscreen></iframe>
+
 		<p>
 			Soon after I turned 29 I met Nicole. She challenged so much about my beliefs. I started <a href="http://www.nzyoga.co.nz">practicing Yoga</a> and reading about Tantra in a book by <a href="http://www.osho.com">Osho</a>. His writings were so profound to me. I'd never had any spiritual teachings resonate with me in such a way. Through each-other Nicole and I learned so much about ourselves and I had profound experiences that confirmed what I had been reading. Strong feelings of love overwhelmed me at times. Through Tantra I lost the desire to climax during love making and gained the desire to simply make love. To just be - together. Nicole and I became very close very quickly. We were attached to each-other.
 		<p>
