Addwed professional work history
Former-commit-id: 73826a4fc36a2a3d123fdf36d91ede2fe958e353

--- a/games.html
+++ b/games.html
@@ -32,11 +32,11 @@
 		<h2>Games</h2>
 
 		<p>
-			From the dissatisfaction of working for large corporations - some of which are in industries I do not agree with - to create and customise enterprise Java applications, I felt the need for a change. I went to the games industry for the challenge, the infinately more interesting products and for the opportunity to make software that does good. It is very important to me now that whatever I do in life, work included, is for a positive end. I studied at <a href="http://www.mediadesignschool.com">Media Design School</a> to assist in the change to the games industry.
+			From the dissatisfaction of working for large corporations - some of which are in industries I do not agree with - to create and customise enterprise Java applications, I felt the need for a change. I went to the games industry for the challenge, the infinately more interesting products and for the opportunity to make software that is actually fun! I studied at <a href="http://www.mediadesignschool.com">Media Design School</a> to assist in the change to the games industry.
 		</p>
 
 		<p>
-			If you are looking for people to work on a <a href="http://en.wikipedia.org/wiki/Serious_game">serious game</a> title, <a href="contactme.html">get in touch</a>. I'm always open to new opportunities to help create good games.
+			If you are looking for people to work on a fun game, <a href="contactme.html">get in touch</a>. I'm always open to new opportunities to help create good games.
 		</p>
 
 		<h3>Competitions</h3>
@@ -382,7 +382,7 @@
 
 				<img src="images/greencompanion.png" />
 			</td>
-		</table>
+		</table>1
 
 		<h4>Steering</h4>
 
