--- a/software.html
+++ b/software.html
@@ -109,6 +109,50 @@
 		<!--h4>www.simpleentertainment.org</h4>
 
 		<a href="http://www.simpleentertainment.org"><img id="simpleentertainment" src="images/simpleentertainment.png" /></a-->
+
+		<h3>Professional</h3>
+
+		<h4>Bravura Solutions <a href="http://www.bravurasolutions.com">(website)</a></h4>
+
+		<p>
+			I worked primarily on two of their web based enterprise solutions, <a href="http://bravurasolutions.com/solutions/products/wealth-and-life-administration-systems/sonata">Sonata</a> (Web) and eTalis in Agile environments. Both used technology stacks that I had almost no experience with but by the end of my time there I was the authority on most of them in the office where I worked due to my quick ability to learn.
+		</p>
+
+		<p>
+			I also often worked on technical roadmap tasks designed to improve the robustness and maintainability of the software. These tasks were often related to the merging the two products Sonata (Web) and eTalis and taking the best approaches from both into the final result.
+		</p>
+
+		<p>
+			Before I left I was asked to perform training of employees wishing to move to development of web-based products which used a lot of different technologies and patterns from the desktop applications they had worked on previously.
+		</p>
+
+		<h4>Matrikon <a href="http://www.matrikon.com">(website)</a></h4>
+
+		<p>
+			I developed customizations and extensions to the <a href="http://www.maximoassetmanagement.com">Maximo</a> system, an enterprise quality J2EE framework owned by IBM. I also developed integrations to Oracle Apps, SAP and others. The majority of this work was Java coding and database scripting with XML and JSP for the UI elements.
+		</p>
+
+		<p>
+			I liaised with clients, often unsupervised and on-site, determined their needs, designed and implemented solutions, tested these solutions and deployed them to the clients' systems.
+		</p>
+
+		<p>
+			At times I was responsible for teaching and delegating work to up to three other developers. When I left I was the senior Maximo developer in the Canadian HQ office.
+		</p>
+
+		<h4>Quadratek <a href="http://www.quadratekgroup.com">(website)</a></h4>
+
+		<p>
+			I was given a three month contract to consult and develop on a military satellite communications project for the UAE with their client <a href="http://www.astrium.eads.net/">EADS Astrium</a>. In this instance the Service Management flavour of Maximo was being used for the ordering of certain communications required for military deployments.
+		</p>
+
+		<p>
+			I advised on the best practices and solutions that could be used to implement this functionality before engaging in designing, developing and testing those solutions in an Agile environment.
+		</p>
+
+		<p>
+			During this time I delegated work to up to two other developers. Although I was offered an extension to my contract by various parties I was not satisfied with the location of the work and so sought work elsewhere.
+		</p>
 	</body>
 
 </html>
