Updated link to PC Remote source
Former-commit-id: 9b6d362625ad039a981a0d3762bd774fd0424932

--- a/software.html
+++ b/software.html
@@ -63,7 +63,7 @@
 			<td>
 				<h5>Source</h5>
 
-				<a href="https://github.com/simple-entertainment/pc-remote">Repository on GitHub</a>
+				<a href="https://github.com/simplegsb/pc-remote">Repository on GitHub</a>
 
 				<h5>Download</h5>
 
